setup/resources/install/kfserving/0.5.1/post-install/https/ingress-istio-stg.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-istio-stg
  # namespace: istio-system
  annotations:
    cert-manager.io/issuer: letsencrypt-istio-stg  # >= v0.11
    # cert-manager.io/cluster-issuer: letsencrypt-istio-stg
    kubernetes.io/ingress.class: istio
    # kubernetes.io/tls-acme: "true"  # < Could not determine issuer for ingress due to bad annotations: failed to determine issuer name to be used for ingress resource
    kubernetes.io/ingress.allow-http: "true"
spec:
  tls:  # < placing a host in the TLS config will indicate a cert should be created
  - hosts:

    - stg.airuntime.com
    - app.stg.airuntime.com
    - gateway.stg.airuntime.com
    - kiali.stg.airuntime.com
    - prometheus.stg.airuntime.com
    - grafana.stg.airuntime.com
    - tracing.stg.airuntime.com
    - dashboard.stg.airuntime.com
    - es.stg.airuntime.com
    - kibana.stg.airuntime.com
    - fluentd.stg.airuntime.com
    - tekton.stg.airuntime.com

    secretName: ingress-istio-tls-stg  # < cert-manager will store the created certificate in this secret.
    # `kubectl -n kubeflow describe certificates.cert-manager.io nginx-tls-prod`
  rules:
  - host: "*.stg.airuntime.com"  # www.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: istio-ingressgateway
          servicePort: 80
  # - host: "dashboard.stg.airuntime.com"  # www.example.com
  #   http:
  #     paths:
  #     - path: /
  #       backend:
  #         serviceName: istio-ingressgateway
  #         servicePort: 443
